Added note adding screen.
