# services/api/note/src/main/java/pl/polsl/api/NotesApi.java
@@ -1,5 +1,5 @@
 /**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
+ * NOTE: This class is auto generated by the swagger code generator program (2.4.8).
  * https://github.com/swagger-api/swagger-codegen
  * Do not edit the class manually.
  */
@@ -27,14 +27,14 @@ public interface NotesApi {
 
     NotesApiDelegate getDelegate();
 
-    @ApiOperation(value = "Creates a new note", nickname = "createNote", notes = "", tags={  })
+    @ApiOperation(value = "Creates a new note", nickname = "createNote", notes = "", response = String.class, tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 204, message = "Counter succesfully created."),
+        @ApiResponse(code = 201, message = "Counter succesfully created.", response = String.class),
         @ApiResponse(code = 400, message = "Counter couldn't have been created."),
-        @ApiResponse(code = 500, message = "") })
+        @ApiResponse(code = 500, message = "An unexpected error occured.", response = Object.class) })
     @RequestMapping(value = "/notes",
         method = RequestMethod.POST)
-    default ResponseEntity<Void> createNote(@ApiParam(value = "Note to create"  )  @Valid @RequestBody Note note) {
+    default ResponseEntity<String> createNote(@ApiParam(value = "Note to create"  )  @Valid @RequestBody Note note) {
         return getDelegate().createNote(note);
     }
 
@@ -43,7 +43,7 @@ public interface NotesApi {
     @ApiResponses(value = { 
         @ApiResponse(code = 204, message = "Note succesfully deleted."),
         @ApiResponse(code = 400, message = "Note couldn't have been deleted."),
-        @ApiResponse(code = 500, message = "") })
+        @ApiResponse(code = 500, message = "An unexpected error occured.", response = Object.class) })
     @RequestMapping(value = "/notes/{id}",
         method = RequestMethod.DELETE)
     default ResponseEntity<Void> deleteNote(@ApiParam(value = "Id of note to delete",required=true) @PathVariable("id") String id) {
@@ -54,7 +54,7 @@ public interface NotesApi {
     @ApiOperation(value = "Gets notes", nickname = "getNotes", notes = "Return list of notes", response = Note.class, responseContainer = "List", tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "List of notes", response = Note.class, responseContainer = "List"),
-        @ApiResponse(code = 500, message = "") })
+        @ApiResponse(code = 500, message = "An unexpected error occured.", response = Object.class) })
     @RequestMapping(value = "/notes",
         method = RequestMethod.GET)
     default ResponseEntity<List<Note>> getNotes(@ApiParam(value = "") @Valid @RequestParam(value = "recipent", required = false) String recipent,@ApiParam(value = "") @Valid @RequestParam(value = "creator", required = false) String creator) {
@@ -66,7 +66,7 @@ public interface NotesApi {
     @ApiResponses(value = { 
         @ApiResponse(code = 204, message = "Note succesfully modified."),
         @ApiResponse(code = 400, message = "Note couldn't have been modified."),
-        @ApiResponse(code = 500, message = "") })
+        @ApiResponse(code = 500, message = "An unexpected error occured.", response = Object.class) })
     @RequestMapping(value = "/notes/{id}",
         method = RequestMethod.PATCH)
     default ResponseEntity<Void> modifyNote(@ApiParam(value = "Id of note to delete",required=true) @PathVariable("id") String id,@ApiParam(value = "Modified note"  )  @Valid @RequestBody Note note) {
